# Game-new

./: CMakeLists.txt  includes templates.txt  main
Debug/: makefile  sources.mk  subdir.mk
Debug/sdl_utils/: SDLLoader.d  subdir.mk
include/common/: CommonDefines.h
include/engine/: Engine.h  EngineConfigLoader.h
include/engine/config/: EngineConfig.h
include/game/: Game.h
include/game/config/: GameConfig.h
include/game/entities/: Console.h  KeyWords.h  TextField.h  TextLine.h
manager_utils/: CMakeLists.txt
manager_utils/include/manager_utils/audio/: Audio.h  Sound.h
manager_utils/include/manager_utils/config/: DrawMgrConfig.h  ManagerHandlerConfig.h  MediaMgrConfig.h  RsrcMgrConfig.h
manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  MediaMgr.h  MgrBase.h  RsrcMgr.h
manager_utils/src/audio/: Audio.cpp  Sound.cpp
manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
manager_utils/src/managers/: DrawMgr.cpp  ManagerHandler.cpp  MediaMgr.cpp  RsrcMgr.cpp
sdl_utils/: CMakeLists.txt
sdl_utils/include/sdl_utils/: InputEvent.h  Media.h  Monitor.h  Renderer.h  SDLLoader.h  Texture.h
sdl_utils/include/sdl_utils/config/: ImageContainerConfig.h  MonitorConfig.h  MonitorConfig.txt  SoundContainerConfig.h  TextContainerConfig.h
sdl_utils/include/sdl_utils/containers/: ImageContainer.h  SoundContainer.h  TextContainer.h
sdl_utils/include/sdl_utils/tools/: AutoResLoader.h
sdl_utils/src/: InputEvent.cpp  Media.cpp  Monitor.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
sdl_utils/src/containers/: ImageContainer.cpp  SoundContainer.cpp  TextContainer.cpp
sdl_utils/src/tools/: AutoResLoader.cpp
src/: main.cpp
src/engine/: Engine.cpp  EngineConfigLoader.cpp
src/game/: Game.cpp
src/game/entities/: Console.cpp  KeyWords.cpp  TextField.cpp  TextLine.cpp
utils/: CMakeLists.txt
utils/include/utils/common/: CommonPaths.h
utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
utils/include/utils/input/: EventDefines.h
utils/include/utils/thread/: ThreadUtils.h
utils/include/utils/time/: Time.h
utils/include/utils/tools/: ConfigApplier.h  ConfigExtractor.h  ConfigValidator.h
utils/src/drawing/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
utils/src/thread/: ThreadUtils.cpp
utils/src/time/: Time.cpp
